--- a/package.json
+++ b/package.json
@@ -1,102 +1,84 @@
 {
-  "name": "TheMystic-Bot-MD",
-  "version": "1.0.0",
-  "description": "Subs. al canal de YT The Shadow Borkers - TEAM",
-  "main": "index.js",
-  "type": "module",
-  "directories": {
-    "lib": "lib",
-    "src": "src",
-    "plugins": "plugins"
-  },
-    "scripts": {
-    "start": "node index.js",
-    "qr": "node index.js qr",
-    "code": "node index.js code",
-    "test": "node test.js",
-    "test2": "nodemon index.js", 
-    "eslint": "eslint .",
-    "eslintfix": "eslint --fix ."
-  },
-  "homepage": "https://github.com/BrunoSobrino/TheMystic-Bot-MD",
-  "author": {
-    "name": "BrunoSobrino"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/BrunoSobrino/TheMystic-Bot-MD.git"
-  },
-  "bugs": {
-    "url": "https://github.com/BrunoSobrino/TheMystic-Bot-MD/issues"
-  },
-  "license": "GPL-3.0-or-later",
-  "dependencies": {
-    "@adiwajshing/keyed-db": "^0.2.4",
-    "@bochilteam/scraper": "^4.2.4",
-    "@brandond/findthelyrics": "^2.0.5",
-    "@green-code/music-track-data": "^2.0.3",
-    "@sasmeee/igdl": "npm:@sasmeee/igdl",
-    "@shineiichijo/marika": "^2.0.6",
-    "@vitalets/google-translate-api": "^8.0.0",
-    "@whiskeysockets/baileys": "npm:@whiskeysockets/baileys",
-    "@xct007/frieren-scraper": "github:xct007/frieren-scraper",
-    "@sefinek/google-tts-api": "*",
-    "acrcloud": "^1.4.0",
-    "api-dylux": "^1.6.2",
-    "aptoide-scraper": "^1.0.1",
-    "awesome-phonenumber": "^2.68.0",
-    "axios": "^1.1.3",
-    "body-parser": "^1.20.2",
-    "cfonts": "^2.10.0",
-    "chalk": "^5.0.0",
-    "cheerio": "^1.0.0-rc.10",
-    "colors": "1.4.0",
-    "express": "^4.17.3",
-    "fb-downloader-scrapper": "^1.0.1",
-    "file-type": "^17.1.1",
-    "fluid-spotify.js": "*",
-    "fluent-ffmpeg": "^2.1.2",
-    "formdata-node": "^4.3.2",
-    "fs": "^0.0.1-security",
-    "google-it": "^1.6.3",
-    "google-play-scraper": "^10.0.0",
-    "hispamemes": "^1.0.7",
-    "human-readable": "^0.2.1",
-    "imagemaker.js": "^2.0.4",
-    "instagram-url-direct": "^1.0.13",
-    "jsdom": "^19.0.0",
-    "link-preview-js": "^3.0.0",
-    "lodash": "^4.17.21",
-    "lowdb": "^3.0.0",
-    "md5": "^2.3.0",
-    "megajs": "^1.1.3",
-    "moment-timezone": "^0.5.34",
-    "mongoose": "^6.3.3",
-    "node-fetch": "^3.2.0",
-    "node-gtts": "^2.0.2",
-    "node-id3": "^0.2.6",
-    "node-webpmux": "^3.1.1",
-    "openai": "^3.3.0",
-    "pdfkit": "^0.13.0",
-    "perf_hooks": "^0.0.1",
-    "pino": "^7.8.0",
-    "pino-pretty": "^7.5.1",
-    "qrcode": "^1.5.0",
-    "qrcode-terminal": "^0.12.0",
-    "readline": "^1.3.0",
-    "similarity": "^1.2.1",
-    "socket.io": "^4.4.1",
-    "sanzy-spotifydl": "*",
-    "syntax-error": "^1.4.0",
-    "terminal-image": "^2.0.0",
-    "url-regex-safe": "^3.0.0",
-    "wa-sticker-formatter": "^4.3.2",
-    "yargs": "^17.3.1",
-    "yt-search": "^2.10.3",
-    "ytdl-core": "github:khlevon/node-ytdl-core#v4.11.4-patch.2"
-  },
-  "devDependencies": {
-    "eslint": "^8.45.0",
-    "eslint-config-google": "^0.14.0"
-  }
+   "name": "rcd-md",
+   "version": "2.5.0",
+   "description": "Multi device whatsapp bot by RCD ....",
+   "main": "index.js",
+   "type": "commonjs",
+   "scripts": {
+      "run": "pm2 start . --deep-monitoring --attach --name Itxxwasi || node .",
+      "Itxxwasi ": "pm2 start . --deep-monitoring --attach --name Itxxwasi || node .",
+      "start": "pm2 start . --attach --name Itxxwasi",
+      "stop": "pm2 stop Itxxwasi",
+      "heroku-postbuild": "git clone https://github.com/DEXTER-BOTS/RCD-MD.git temp && mv temp/.git .git && rm -rf temp && npx puppeteer@latest install  --y",
+      "fis-heroku-postbuild": "git clone https://github.com/DEXTER-BOT-1/RCD-MD.git temp1 && rsync -av temp1/* ./ && rsync -av temp1/.* ./ && rm -rf temp1 && npm i && npx puppeteer@latest install",
+      "postinstall": "npx puppeteer@latest install --y"
+   },
+   "author": "RCD",
+   "license": "Apache-2.0",
+   "dependencies": {
+      "@adiwajshing/keyed-db": "^0.2.4",
+      "@hapi/boom": "^9.1.4",
+      "@whiskeysockets/baileys": "6.6.0",
+      "acrcloud": "^1.4.0",
+      "anime-character-random": "latest",
+      "aptoide-scraper": "^1.0.1",
+      "async-g-i-s": "^1.4.0",
+      "axios": "^0.24.0",
+      "canvas": "^2.11.2",
+      "cheerio": "^1.0.0-rc.10",
+      "child_process": "^1.0.2",
+      "crypto-js": "latest",
+      "discord-mongoose-economy": "^1.2.0",
+      "discord-xp": "^1.1.16",
+      "dotenv": "^16.0.0",
+      "express": "^4.18.1",
+      "ffmpeg": "^0.0.4",
+      "file-type": "^16.5.3",
+      "fluent-ffmpeg": "^2.1.2",
+      "form-data": "^4.0.0",
+      "fs-extra": "^10.1.0",
+      "google-it": "^1.6.4",
+      "google-tts-api": "^2.0.2",
+      "heroku-client": "3.1.0",
+      "human-readable": "^0.2.1",
+      "jimp": "^0.16.1",
+      "jsdom": "^16.4.0",
+      "koyeb-api-client": "latest",
+      "link-preview-js": "^3.0.0",
+      "moment-timezone": "^0.5.34",
+      "mongoose": "^6.2.1",
+      "mumaker": "^2.0.0",
+      "node-cron": "^3.0.0",
+      "node-fetch": "^2.6.1",
+      "node-webpmux": "^3.1.0",
+      "pastebin-js": "latest",
+      "path": "^0.12.7",
+      "pg": "^8.11.3",
+      "pm2": "^5.2.0",
+      "puppeteer": "latest",
+      "qrcode": "latest",
+      "secktor-pack": "latest",
+      "simple-git": "^3.15.1",
+      "translatte": "^3.0.1",
+      "util": "^0.12.4",
+      "wa-sticker-formatter": "^4.3.2",
+      "youtubei.js": "^7.0.0",
+      "ytdl-core": "^4.11.5",
+      "ytdl-secktor": "^0.0.1-development"
+   },
+   "directories": {
+      "lib": "lib",
+      "plugins": "plugins"
+   },
+   "devDependencies": {
+      "pino": "^7.0.5"
+   },
+   "repository": {
+      "type": "git",
+      "url": "git+https://github.com/DEXTER-BOTS/STATUS-SENDER.git"
+   },
+   "bugs": {
+      "url": "https://github.com/DEXTER-BOT-1/RCD-MD/issues"
+   },
+   "homepage": "https://github.com/DEXTER-BOT-1/RCD-MD"
 }
